Isomorhpic string